[tool.poetry]
name = "flask-pyctuator-extension"
version = "1.0.0"
description = "Flask Extension for Pyctuator"
authors = [
    "Luke Skywalker <Luke@starwars.com>",
]

[tool.poetry.dependencies]
python = "^3.7"
flask = { version = "^1.1" }
pyctuator = { version = "^0.12" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"